cmake_minimum_required(VERSION 2.8.4)
set(CMAKE_CXX_FLAGS " -std=c++11")
project( get-roi-from-face )
set(USER_PATH bruce)
set(OPENCV_VERSION opencv-2.4.12)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
set( OpenCV_DIR /home/${USER_PATH}/${OPENCV_VERSION}/release )
set(OpenCV_FOUND 1)
find_package( OpenCV )
include_directories(${CMAKE_BINARY_DIR})
include_directories(/usr/include)
link_directories(/usr/lib)
link_directories(${CMAKE_BINARY_DIR})
#add_library( ${PROJECT_NAME} SHARED ${PROJECT_NAME}.cpp )
add_executable( ${PROJECT_NAME} ${PROJECT_NAME}.cpp )
target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS}  libBasics libTracker )